--- a/src/templates/nethermind/GasCostOf.cs.jinja2
+++ b/src/templates/nethermind/GasCostOf.cs.jinja2
@@ -1,65 +1,63 @@
-// {{ pitstop_header }}
-// Gas schedule: {{ schedule.fork }}
-// {{ schedule.description }}
-//
 // SPDX-FileCopyrightText: 2025 Demerzel Solutions Limited
 // SPDX-License-Identifier: LGPL-3.0-only
+//
+// {{ pitstop_header }}
 
 namespace Nethermind.Evm
 {
     public static class GasCostOf
     {
-        public const long Base = {{ schedule.operations.BASE }};
-        public const long VeryLow = {{ schedule.operations.VERY_LOW }};
-        public const long Low = {{ schedule.operations.LOW }};
-        public const long Mid = {{ schedule.operations.MID }};
-        public const long High = {{ schedule.operations.HIGH }};
+        public const long Base = {{ schedule.constants.GAS_BASE }};
+        public const long VeryLow = {{ schedule.constants.GAS_VERY_LOW }};
+        public const long Low = {{ schedule.constants.GAS_LOW }};
+        public const long Mid = {{ schedule.constants.GAS_MID }};
+        public const long High = {{ schedule.constants.GAS_HIGH }};
         public const long Jump = Mid;
         public const long JumpI = High;
-        public const long ExtCode = 20;
+        public const long ExtCode = {{ schedule.opcodes.EXTCODESIZE }};
         public const long ExtCodeEip150 = 700;
-        public const long Balance = {{ schedule.operations.BALANCE }};
+        public const long Balance = {{ schedule.opcodes.BALANCE }};
         public const long BalanceEip150 = 400;
         public const long BalanceEip1884 = 700;
-        public const long SLoad = {{ schedule.operations.SLOAD }};
+        public const long SLoad = {{ schedule.opcodes.SLOAD }};
         public const long SLoadEip150 = 200;
         public const long SLoadEip1884 = 800;
-        public const long JumpDest = {{ schedule.operations.JUMPDEST }};
+        public const long JumpDest = {{ schedule.opcodes.JUMPDEST }};
         public const long SStoreNetMeteredEip1283 = 200;
         public const long SStoreNetMeteredEip2200 = 800;
-        public const long SSet = {{ schedule.operations.SSET }};
-        public const long SReset = {{ schedule.operations.SRESET }};
-        public const long Create = {{ schedule.operations.CREATE }};
-        public const long CodeDeposit = {{ schedule.operations.CODEDEPOSIT }};
-        public const long Call = {{ schedule.operations.CALL }};
+        public const long SSet = {{ schedule.storage.SSTORE_SET_COST }};
+        public const long SReset = {{ schedule.storage.SSTORE_RESET_COST }};
+        public const long Create = {{ schedule.opcodes.CREATE }};
+        public const long CodeDeposit = 200;
+        public const long Call = {{ schedule.opcodes.CALL }};
         public const long CallEip150 = 700;
-        public const long CallValue = {{ schedule.operations.CALLVALUE }};
-        public const long CallStipend = {{ schedule.operations.CALLSTIPEND }};
-        public const long NewAccount = {{ schedule.operations.NEWACCOUNT }};
-        public const long Exp = {{ schedule.operations.EXP }};
-        public const long ExpByte = 10;
-        public const long ExpByteEip160 = {{ schedule.operations.EXPBYTE }};
-        public const long Memory = {{ schedule.operations.MEMORY }};
-        public const long TxCreate = {{ schedule.operations.TXCREATE }};
-        public const long TxDataZero = {{ schedule.operations.TXDATAZERO }};
-        public const long TxDataNonZero = 68;
-        public const long TxDataNonZeroEip2028 = {{ schedule.operations.TXDATANONZERO }};
-        public const long Transaction = {{ schedule.operations.TRANSACTION }};
+        public const long CallValue = 9000;
+        public const long CallStipend = 2300;
+        public const long NewAccount = 25000;
+        public const long Exp = {{ schedule.opcodes.EXP }};
+        public const long ExpByte = {{ schedule.memory.EXPBYTE }};
+        public const long ExpByteEip160 = 50;
+        public const long Memory = {{ schedule.memory.MEMORY_WORD }};
+        public const long TxCreate = {{ schedule.opcodes.CREATE }};
+        public const long TxDataZero = {{ schedule.calldata.DATA_ZERO }};
+        public const long TxDataNonZero = {{ schedule.calldata.DATA_NON_ZERO }};
+        public const long TxDataNonZeroEip2028 = 16;
+        public const long Transaction = {{ schedule.transaction.BASE }};
         public const long BlobHash = 3;
-        public const long Log = {{ schedule.operations.LOG }};
-        public const long LogTopic = {{ schedule.operations.LOGTOPIC }};
-        public const long LogData = {{ schedule.operations.LOGDATA }};
-        public const long Sha3 = {{ schedule.operations.KECCAK256 }};
-        public const long Sha3Word = {{ schedule.operations.KECCAK256WORD }};
-        public const long BlockHash = {{ schedule.operations.BLOCKHASH }};
-        public const long SelfDestruct = 0;
-        public const long SelfDestructEip150 = {{ schedule.operations.SELFDESTRUCT }};
+        public const long Log = {{ schedule.opcodes.LOG0 }};
+        public const long LogTopic = {{ schedule.opcodes.LOG0 }};
+        public const long LogData = 8;
+        public const long Sha3 = {{ schedule.opcodes.SHA3 }};
+        public const long Sha3Word = {{ schedule.memory.SHA3_WORD }};
+        public const long BlockHash = {{ schedule.opcodes.BLOCKHASH }};
+        public const long SelfDestruct = {{ schedule.opcodes.SELFDESTRUCT }};
+        public const long SelfDestructEip150 = 5000;
         public const long ExtCodeHash = 400;
         public const long ExtCodeHashEip1884 = 700;
         public const long SelfBalance = 5;
         public const long InitCodeWord = 2; //eip-3860 gas per word cost for init code size
 
-        public const long ColdSLoad = {{ schedule.storage.SLOAD }}; // eip-2929
+        public const long ColdSLoad = 2100; // eip-2929
 
         public const long ColdAccountAccess = 2600; // eip-2929
         public const long WarmStateRead = 100; // eip-2929
@@ -75,7 +73,7 @@ namespace Nethermind.Evm
         public const long TxDataNonZeroMultiplier = TxDataNonZero / TxDataZero;
         public const long TxDataNonZeroMultiplierEip2028 = TxDataNonZeroEip2028 / TxDataZero;
 
-        public const long MinModExpEip2565 = {{ schedule.precompiles.MODEXP }}; // eip-2565
+        public const long MinModExpEip2565 = 200; // eip-2565
         public const long MinModExpEip7883 = 500; // eip-7883
 
         // Eof Execution EIP-7692
